# bindecrypter

./: README.md  pyproject.toml
bindecrypter/: cli.py  core.py
